--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".HomeActivity">
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -71,6 +71,6 @@
             app:layout_constraintBottom_toTopOf="@+id/textView">
         <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" android:id="@+id/currentOrdersView"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
