--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,16 +4,11 @@
 
 
     <item
-        android:id="@+id/ic_search"
-        android:icon="@drawable/ic_search"
+        android:id="@+id/ic_equipment"
+        android:icon="@drawable/ic_equipment"
         android:title="">
     </item>
 
-    <item
-        android:id="@+id/ic_circle"
-        android:icon="@drawable/ic_circle"
-        android:title="">
-    </item>
 
     <item
         android:id="@+id/ic_home"
@@ -22,15 +17,10 @@
     </item>
 
     <item
-        android:id="@+id/ic_alert"
-        android:icon="@drawable/ic_alert"
+        android:id="@+id/ic_orders"
+        android:icon="@drawable/ic_orders"
         android:title="">
     </item>
 
-    <item
-        android:id="@+id/ic_android"
-        android:icon="@drawable/ic_android"
-        android:title="">
-    </item>
 
 </menu>
