--- a/app/src/main/res/layout/fragment_equipment.xml
+++ b/app/src/main/res/layout/fragment_equipment.xml
@@ -8,9 +8,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/title_equipment" />
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
