--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -1,49 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="0.5">
+    android:fillViewport="false">
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        android:padding="20dp"
+        android:paddingTop="50dp">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/oldPassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:padding="10dp"
-            android:text="TextView" />
+            android:layout_height="30dp"
+            android:layout_weight="0.5"
+            android:text="@string/oldPasswordShow" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/oldPasswordInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.15"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:padding="10dp"
-            android:text="Name" />
+            android:inputType="textPassword" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/newPasswordShow"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_weight="0.5"
+            android:text="@string/newPasswordShow" />
+
+        <EditText
+            android:id="@+id/newPasswordInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="TextView" />
+            android:layout_weight="0.15"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:id="@+id/description_show"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_weight="0"
+            android:text="@string/repeat_password" />
+
+        <EditText
+            android:id="@+id/repeatPasswordInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="0"
+            android:backgroundTint="@color/colorPrimary"
+            android:onClick="savePassword"
+            android:text="@string/save" />
 
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</ScrollView>
+
+
