--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
@@ -11,85 +10,32 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="46dp">
+        android:fitsSystemWindows="true"
+        tools:openDrawer="start">
 
-        <!-- Nie umiem tu rysowac xd TODO -->
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="center_horizontal"
-            android:text="Najblizsze zamowienia"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView5">
-
-        </android.support.v7.widget.RecyclerView>
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Aktualnie wypozyczone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView5"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView6"/>
 
         <LinearLayout
-            android:id="@+id/drawer_header"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:alpha="1.0"
-            android:background="@color/white"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/drawer_title"
+            <FrameLayout
+                android:id="@id/container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:alpha="1.0"
-                android:background="@color/colorAccent"
-                android:paddingStart="15dp"
-                android:paddingTop="90dp"
-                android:paddingBottom="15dp"
-                android:text="@string/settings"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:layout_height="match_parent" />
 
-            <android.support.design.widget.NavigationView
-                android:id="@+id/navigation_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:alpha="1.0"
-                app:menu="@menu/drawer_menu" />
+
         </LinearLayout>
-    </android.support.v4.widget.DrawerLayout>
 
-    <FrameLayout
-        android:id="@id/container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="56dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/nav_view"
-        app:layout_constraintStart_toStartOf="@+id/nav_view"
-        app:layout_constraintTop_toBottomOf="parent" />
+        <android.support.design.widget.NavigationView
+            android:id="@+id/navigation_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/drawer_header"
+            app:menu="@menu/drawer_menu" />
+
+    </android.support.v4.widget.DrawerLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/nav_view"
