--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
-    <group android:id="@+id/grp1" android:checkableBehavior="single" >
-        <item
-            android:id="@+id/passwordChange"
-            android:title="@string/reset_password"
-            android:icon="@drawable/change_password"
-            />
-        <item
-            android:id="@+id/deleteAccount"
-            android:title="@string/delete_account"
-            android:icon="@drawable/delete_account"
-            />
-    </group>
-    <group android:id="@+id/grp2" android:checkableBehavior="single" >
+    <item android:title="@string/settings">
+        <menu>
+                <item
+                    android:id="@+id/passwordChange"
+                    android:icon="@drawable/change_password"
+                    android:title="@string/reset_password" />
+                <item
+                    android:id="@+id/deleteAccount"
+                    android:icon="@drawable/delete_account"
+                    android:title="@string/delete_account" />
+        </menu>
+    </item>
 
-        <item
-            android:padding="10dp"
-            android:id="@+id/logut"
-            android:title="@string/logout"
-            android:icon="@drawable/logout"
-            />
-    </group>
-
+    <item
+        android:gravity="bottom"
+        android:layout_gravity="bottom"
+        android:id="@+id/logout"
+        android:icon="@drawable/logout"
+        android:title="@string/logout" />
 
 </menu>
