--- a/app/src/main/res/layout/fragment_equipment.xml
+++ b/app/src/main/res/layout/fragment_equipment.xml
@@ -14,6 +14,7 @@
         android:text="@string/title_equipment" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/eqContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
