--- a/app/src/main/res/layout/fragment_equipment.xml
+++ b/app/src/main/res/layout/fragment_equipment.xml
@@ -13,7 +13,7 @@
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/title_equipment" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/eqContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
