--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#D81B60</color>
-    <color name="colorPrimaryDark">#D81B60</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#FFF</color>
+    <color name="colorPrimaryDark">#263238</color>
+    <color name="colorAccent">#FF5252</color>
+    <color name="colorSecondary">#EF9A9A</color>
+    <color name="colorAccentLight">#FF8A80</color>
 
     <color name="gray">#bfbfbf</color>
     <color name="white">#fff</color>
