--- a/app/src/main/res/layout/fragment_equipment.xml
+++ b/app/src/main/res/layout/fragment_equipment.xml
@@ -12,7 +12,11 @@
         android:layout_marginTop="10dp"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/title_equipment" />
-
+    <Button
+        android:id="@+id/addEquipment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/eqContainer"
         android:layout_width="match_parent"
