--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,29 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="176dp"
+    android:background="?attr/colorAccent"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="?attr/colorAccent">
+    android:padding="16dp">
 
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/nightModeSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+
+        android:layout_marginEnd="8dp"
+        android:checked="true"
+        android:text="@string/night_mode_switch_label"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/photoCont"
+        app:switchPadding="4dp"
+        app:thumbTint="@color/colorAccentLight" />
 
     <ImageView
         android:id="@+id/photoCont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher_round"/>
+
+        android:layout_marginBottom="8dp"
+        android:src="@mipmap/ic_launcher_round"
+        app:layout_constraintBottom_toTopOf="@+id/dispNameCont"
+        app:layout_constraintStart_toStartOf="@+id/emailCont" />
 
     <TextView
         android:id="@+id/dispNameCont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toTopOf="@+id/emailCont"
+        app:layout_constraintStart_toStartOf="@+id/emailCont"
+        tools:text="displayName" />
 
     <TextView
         android:id="@+id/emailCont"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
 
-</LinearLayout>
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="email" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
