--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -8,7 +8,7 @@
     tools:context=".HomeActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ordersContainer"
+        android:id="@+id/orderContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
