--- a/app/src/main/res/layout/fragment_create_equipment.xml
+++ b/app/src/main/res/layout/fragment_create_equipment.xml
@@ -1,58 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="false">
 
-    <LinearLayout
-         android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:orientation="vertical"
-        android:id="@+id/linearLayout"
-        android:padding="20dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp" android:id="@+id/nameShow" android:layout_weight="0.5"
-            android:text="@string/item_name"/>
+    <RelativeLayout
+        android:id="@+id/relativeRoot3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <EditText
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar3"
+            style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorAccent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ce_new_equipment"
+                android:textColor="@color/white"
+                android:textAllCaps="true"
+                android:textSize="18sp" />
+
+        </androidx.appcompat.widget.Toolbar>
+    <!--
+        <ProgressBar
+            android:id="@+id/progressBar3"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:ems="10"
-            android:id="@+id/nameInput" android:layout_weight="0.15"
-            />
-        <TextView
-            android:text="@string/amount"
-            android:layout_width="match_parent"
-            android:layout_height="30dp" android:id="@+id/amountShow" android:layout_weight="0"
-            />
+            android:layout_below="@id/toolbar3"
+            android:layout_gravity="center"
+            android:layout_marginTop="-6dp"
+            android:indeterminate="true"
+            android:visibility="invisible" />
+        -->
 
-        <EditText
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:ems="10"
-            android:id="@+id/amountInput" android:layout_weight="0.25"/>
-        <TextView
-            android:text="@string/price_day"
-            android:layout_width="match_parent"
-            android:layout_height="30dp" android:id="@+id/priceShow" android:layout_weight="0.10"
-            android:paddingTop="2dp"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:ems="10"
-            android:id="@+id/priceInput" android:layout_weight="0.25"/>
+            android:orientation="vertical"
+            android:layout_marginTop="40dp"
+            android:padding="20dp">
 
-        <Button
-            android:text="@string/save"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/save" android:layout_weight="0"
-            android:layout_marginBottom="5dp" android:layout_marginTop="5dp"
-            android:backgroundTint="@color/colorPrimary"/>
 
-    </LinearLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:hint="@string/ce_name_hint_text"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:boxStrokeColor="@color/colorAccent"
+                app:hintTextColor="@color/colorAccentLight">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/nameInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="text" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:hint="@string/ce_amount_hint_text"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:boxStrokeColor="@color/colorAccent"
+                app:hintTextColor="@color/colorAccentLight">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/amountInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="number" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:hint="@string/ce_price_hint_text"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:boxStrokeColor="@color/colorAccent"
+                app:hintTextColor="@color/colorAccentLight">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/priceInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="number" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/save"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:backgroundTint="@color/colorAccent"
+                android:text="@string/ce_save"
+                android:textColor="?attr/colorSurface"
+                app:cornerRadius="20dp"
+                app:strokeColor="@color/colorAccent"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
 </ScrollView>
-
 
