--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF5252</color>
     <color name="colorSecondary">#EF9A9A</color>
     <color name="colorAccentLight">#FF8A80</color>
-
+    <color name="white">#fff</color>
     <!--<color name="gray">#bfbfbf</color>-->
-    <!--<color name="white">#fff</color>-->
+
 </resources>
